# cargo-mobile2-bug

./: .gitignore  Cargo.toml  README.md  mobile.toml
.cargo/: config.toml
src/: lib.rs
